// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ImageCompVanilla should pass source value 1`] = `
<Image
  accessibilityLabel=""
  accessibilityRole="image"
  host=""
  source="foo"
/>
`;

exports[`ImageCompVanilla should render correctly 1`] = `
<Image
  accessibilityLabel=""
  accessibilityRole="image"
  host=""
  source={
    Object {
      "uri": "",
    }
  }
/>
`;
